<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.hospital.uniandes.edu.co.clinic.PacienteActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelDatos"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextDocumento"
        android:layout_below="@+id/textView"
        android:hint="@string/labelDocumento" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextApellidos"
        android:layout_below="@+id/editTextDocumento"
        android:hint="@string/labelApellidos"
        android:layout_alignRight="@+id/editTextDocumento"
        android:layout_alignEnd="@+id/editTextDocumento"
        android:editable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextNombres"
        android:layout_below="@+id/editTextApellidos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/labelNombres" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextDireccion"
        android:layout_below="@+id/editTextNombres"
        android:hint="@string/labelDireccion"
        android:layout_alignRight="@+id/editTextNombres"
        android:layout_alignEnd="@+id/editTextNombres" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBuscar"
        android:id="@+id/btnBuscar"
        android:layout_below="@+id/editTextDireccion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnServicios"
        android:id="@+id/btnBuscarServicios"
        android:layout_below="@+id/editTextDireccion"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="pdf"
        android:id="@+id/pdf"
        android:layout_below="@+id/btnBuscar"
        android:layout_toEndOf="@+id/btnBuscar"
        android:layout_marginTop="87dp" />
</RelativeLayout>
